--- a/matroxTest-V1/CMakeLists.txt
+++ b/matroxTest-V1/CMakeLists.txt
@@ -2,14 +2,11 @@ cmake_minimum_required(VERSION 2.7)
 project(FMatRoxHGEMM)
 
 set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_FLAGS "-fno-rtti -O3 -Wl,-rpath,${MKLROOT}/lib -mkl=parallel  -fpic -qopenmp -std=c++11")
+set(CMAKE_CXX_FLAGS "-std=c++11 -O3 -qopenmp")
 
-set(CMAKE_CXX_COMPILER /opt/intel/compilers_and_libraries_2019.4.233/mac/bin/intel64/icpc)
-set(OMP /opt/intel/compilers_and_libraries_2019/mac/lib)
+set(CMAKE_CXX_COMPILER /share/apps/compute/intel/intelmpi2018/compilers_and_libraries/linux/bin/intel64/icpc)
+set(OMP /share/apps/compute/intel/intelmpi2018/compilers_and_libraries/linux/lib/intel64/)
 
-
-
-set(MKL_ROOT /opt/intel/mkl)
 set(MKL_INCLUDE_DIRS ${MKL_ROOT}/include/)
 set(MKL_LIBRARIES ${MKL_ROOT}/lib/intel64/)
 
@@ -22,4 +19,4 @@ FILE(GLOB srcode "../sympiler/HMatrix.cpp" "../sympiler/CDS.cpp" "../sympiler/bo
 set(SOURCE_FILES main.cpp Util.h main.cpp HTree.h ${srcode} compression.h hcds.h)
 
 add_executable(FMatRoxHGEMM ${SOURCE_FILES})
-target_link_libraries(FMatRoxHGEMM iomp5 pthread m dl)
+target_link_libraries(FMatRoxHGEMM mkl_intel_lp64 mkl_gnu_thread mkl_core iomp5 pthread m dl)
