--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -DCHOL -DMKL -DVERIFY -DCOLDCACHE   -st
 
 add_subdirectory(sympiler)
 add_subdirectory(symTest)
-add_subdirectory(matroxTest)
+#add_subdirectory(matroxTest)
 add_subdirectory(matroxTest-V1)
 #add_subdirectory(libTest)
