Edited the build system and readme file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,30 +1,26 @@
 cmake_minimum_required(VERSION 2.7)
 
-set(MKLROOT "/opt/intel/mkl/")
+#set(MKLROOT "/opt/intel/mkl/")
 
-set(MKL_INC "$ENV{MKLROOT}/mkl/include")
 
+
+set(MKL_INC "$ENV{MKLROOT}/include")
 message(is:"${MKL_INC}")
-
 if(APPLE)
-    set(MKL_LIB "$ENV{MKLROOT}/mkl/lib")
-    set(MKL_LIB2 "$ENV{MKLROOT}/compiler/lib")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -qopenmp")
+    SET(CMAKE_C_COMPILER /usr/local/Cellar/gcc/9.1.0/bin/gcc-9)
+    SET(CMAKE_CXX_COMPILER /usr/local/Cellar/gcc/9.1.0/bin/g++-9)
+    set(MKL_LIB "$ENV{MKLROOT}/lib")
+    set(MKL_LIB2 "$ENV{MKLROOT}/../compiler/lib")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -openmp")
 endif()
 if(UNIX AND NOT APPLE)
-    set(MKL_LIB "$ENV{MKLROOT}/mkl/lib/intel64")
-    set(MKL_LIB2 "$ENV{MKLROOT}/compiler/lib/intel64")
+    set(MKL_LIB "$ENV{MKLROOT}/lib/intel64")
+    # for iomp lib
+    set(MKL_LIB2 "$ENV{MKLROOT}/../compiler/lib/intel64")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
 endif()
-#set(MKL_INC "/home/kazem/programs/intel/compilers_and_libraries_2017.4.196/linux/mkl/include")
-#set(MKL_LIB "/home/kazem/programs/intel/compilers_and_libraries_2017.4.196/linux/mkl/lib/intel64")
-#set(MMM "/home/kazem/programs/intel/compilers_and_libraries_2017.4.196/linux/compiler/lib/intel64/")
 
-set(SUITEROOT "/home/labuser/Downloads/SuiteSparse/")
-set(SUITE_INC "$ENV{SUITEROOT}/include/")
-set(SUITE_LIB "$ENV{SUITEROOT}/lib/")
-#set(SUITE_INC "/home/kazem/programs/SuiteSparse/include")
-#set(SUITE_LIB "/home/kazem/programs/SuiteSparse/lib")
+
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -DCHOL -DMKL -DVERIFY -DCOLDCACHE   -std=gnu++11  -m64  ")
